Closed Bug 1322679 Opened 8 years ago Closed 8 years ago

Missing frame after seeking when video is paused and remote decoding pref is on.

Categories

(Firefox for Android Graveyard :: Audio/Video, defect)

defect
Not set
normal

Tracking

(firefox53 fixed)

RESOLVED FIXED
Firefox 53
Tracking Status
firefox53 --- fixed

People

(Reporter: jhlin, Assigned: jhlin)

Details

Attachments

(1 file)

RemoteVideoDecoder relies on VideoData::Listener::OnSentToCompositor() to render output buffers, but VideoSink::Redraw() doesn't call VideoData::MarkSentToCompositor(). [1]

[1] http://searchfox.org/mozilla-central/source/dom/media/mediasink/VideoSink.cpp#295
Assignee: nobody → jolin
Comment on attachment 8817610 [details]
Bug 1322679 - call MarkSentToCompositor() when VideoSink::Redraw() processing queued frame.

https://reviewboard.mozilla.org/r/97840/#review98212
Attachment #8817610 - Flags: review?(jwwang) → review+
Pushed by jolin@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/641f5b1431fc
call MarkSentToCompositor() when VideoSink::Redraw() processing queued frame. r=jwwang
https://hg.mozilla.org/mozilla-central/rev/641f5b1431fc
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 53
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: