Bug 1322679 - call MarkSentToCompositor() when VideoSink::Redraw() processing queued frame. r=jwwang

MozReview-Commit-ID: IBM6HcCpVA8